<resources>
    <string name="app_name">#UruguaySeVacuna</string>
    <string name="title_activity_vacunatorios">Map</string>
    <string name="iniciosesion">Iniciar Sesión</string>
    <string name="confirmar">Confirmar</string>
    <string name="registrarse">No estoy registrado</string>
    <string name="Documento">Documento</string>
    <string name="Contraseña">Contraseña</string>
    <string name="date">Fecha de nacimiento</string>
    <string name="email">E-mail</string>
    <string name="telefono">Telefono</string>
    <string name="domicilio">Domicilio</string>
    <string name="registro">Registrarme</string>
    <string name="nombreusuario">Usuario</string>


    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>


    <string name="vacunatorios">Ver vacunatorios</string>
    <string name="informacion">Informacion</string>
    <string name="title_activity_menu">menu</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_menu_app">menuApp</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>